# AZsubay

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  example_usage.py  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
azsubay/: cli.py
azsubay/kyc/: __init__.py  verify.py
azsubay/pay/: __init__.py  payments.py
azsubay/ussd/: menu.py
azsubay/utils/: crypto.py
docs/: kyc.rst  pay.rst  ussd.rst  utils.rst
src/azsubay/: __init__.py  cli.py
src/azsubay/kyc/: __init__.py  verify.py
src/azsubay/pay/: __init__.py  crypto.py  payments.py  verify.py
src/azsubay/ussd/: __init__.py  menu.json  menu.py
src/azsubay/utils/: __init__.py  crypto.py
test/: test_cli.py  test_init.py  test_kyc.py  test_pay.py  test_ussd.py  test_utils.py
