[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azsubay"
version = "0.1.0"
description = "AZsubay: Unified SDK for payments, KYC, and USSD integrations"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  { name = "AZsubay", email = "AZsubay@protonmail.com" }
]
keywords = ["mobile money", "fintech", "KYC", "USSD", "SDK"]
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.70",
  "requests>=2.25", 
  "pydantic>=1.10",
  "cryptography>=3.4"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Opentech-info"
Documentation = "https://azsubay.com/docs"
Repository = "https://github.com/Opentech-info/AZsubay.git"
"Bug Tracker" = "https://github.com/Opentech-info/AZsubay/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["azsubay*"]
exclude = ["tests*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=5.0",
    "mypy>=0.991",
    "build>=0.8",
    "twine>=4.0"
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "requests-mock>=1.0"
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["azsubay"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=azsubay --cov-report=html --cov-report=term-missing"
