[metadata]
name = azsubay
version = 0.1.1
description = AZsubay: Unified SDK for payments, KYC, and USSD integrations
long_description = file: README.md
long_description_content_type = text/markdown
author = AZsubay
author_email = AZsubay@protonmail.com
url = https://github.com/Opentech-info/AZsubay.git
project_urls = 
    Documentation = https://azsubay.com/docs
    Bug Tracker = https://github.com/Opentech-info/AZsubay/issues
    Source Code = https://github.com/Opentech-info/AZsubay.git
license = MIT
license_files = LICENSE
classifiers = 
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Office/Business :: Financial
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: System :: Systems Administration
    Topic :: Security :: Cryptography
keywords = mobile money, fintech, KYC, USSD, SDK, payments, verification

[options]
packages = find:
python_requires = >=3.9
install_requires = 
    fastapi>=0.70
    requests>=2.25
    pydantic>=1.10
    cryptography>=3.4
    redis>=4.3
include_package_data = True
zip_safe = False

[options.packages.find]
where = src
include = azsubay*
exclude = tests*

[options.extras_require]
dev = 
    pytest>=7.0
    pytest-cov>=4.0
    black>=22.0
    isort>=5.0
    flake8>=5.0
    mypy>=0.991
    build>=0.8
    twine>=4.0
test = 
    pytest>=7.0
    pytest-cov>=4.0
    requests-mock>=1.0
    fakeredis>=2.0.0

[options.entry_points]
console_scripts = 
    azsubay = azsubay.cli:main

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = 
    .git,
    __pycache__,
    build,
    dist,
    .eggs,
    *.egg-info,
    .tox,
    .venv,
    .mypy_cache

[egg_info]
tag_build = 
tag_date = 0
